web-infras/parser/tests/fixtures/babel/es2015/yield/parameter-name-generator/output.txt
[SyntaxError]: 'yield' is only allowed within generator functions. (1,14)
1|function* fn(yield) {}
 |            ^
